[package]
name = "rusty_json"
version = "1.2.1"
edition = "2021"
authors = ["Ammar Dev"]
description = "A lightweight and efficient library for creating, reading, and writing JSON in Rust"
repository = "https://github.com/ammardevz/rusty_json"
license = "MIT"

[dependencies]
indexmap = "2.2.6"
jsonparser = "0.2.1"
rusty_json_serialization = {version = "1.0.0",path = "src/rusty_json_serialization", optional = true}
thiserror = "1.0.61"

[features]
serialization = ["rusty_json_serialization"]