[package]
name = "rusty_json"
version = "2.0.5"
edition = "2021"
authors = ["Ammar Dev"]
description = "A lightweight and straightforward JSON library for Rust, providing basic JSON functionality, serialization, and manipulation."
repository = "https://github.com/ammardevz/rusty_json"
license = "MIT"
exclude = ["tests/*"]

[dependencies]
indexmap = "2.2.6"
rusty_json_serialization = { version = "1.2.1", path = "src/rusty_json_serialization", optional = true }
thiserror = "1.0.61"
nom = "7.1.3"

[features]
serialization = ["rusty_json_serialization"]


